Can't build with macOS 10.15 SDK
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: alexboy94, Assigned: pete)
References
Details
Attachments
(4 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
Build Firefox 68 ESR (I assume affects all) using standard procedure on macOS, with XCode 11 and using the default SDK (10.15).
Actual results:
13:05.11 Undefined symbols for architecture x86_64:
13:05.14 "OBJC_CLASS$NSSurface", referenced from:
13:05.14 l_OBJC$CATEGORY_NSSurface$_DontCutOffCorners in nsChildView.o
13:05.14 ld: symbol(s) not found for architecture x86_64
13:05.14 clang: error: linker command failed with exit code 1 (use -v to see invocation)
Expected results:
Build should have compiled.
Updated•6 years ago
|
Comment 2•6 years ago
|
||
(In reply to Alex Kontos from comment #0)
Build Firefox 68 ESR (I assume affects all) using standard procedure on macOS, with XCode 11 and using the default SDK (10.15).
We officially only support building with the 10.11 SDK. Fixing this issue will not be of particularly high priority since it only affects developers building Firefox 68 ESR locally with an SDK that's not officially supported.
| Reporter | ||
Comment 3•6 years ago
|
||
That's fair! I suppose this may be more relevant in the (distant) future when the SDK version is changed.
Comment 4•6 years ago
|
||
(In reply to Alex Kontos from comment #3)
That's fair! I suppose this may be more relevant in the (distant) future when the SDK version is changed.
Are you seeing the same errors when building mozilla-central? If so, we can repurpose this bug to get this fixed there. For reference, a similar bug for the 10.14 SDK was bug 1564216.
| Reporter | ||
Comment 5•6 years ago
|
||
(In reply to Stephen A Pohl [:spohl] from comment #4)
(In reply to Alex Kontos from comment #3)
That's fair! I suppose this may be more relevant in the (distant) future when the SDK version is changed.
Are you seeing the same errors when building mozilla-central? If so, we can repurpose this bug to get this fixed there. For reference, a similar bug for the 10.14 SDK was bug 1564216.
Building 5c1282d, yes.
Updated•6 years ago
|
Comment 6•6 years ago
|
||
Markus, looks like DontCutoffCorners was removed in bug 1576390 - should we increase the max SDK version? Are there other known issues with the 10.15 SDK still?
Comment 7•6 years ago
|
||
(In reply to :Gijs (he/him) from comment #6)
Markus, looks like
DontCutoffCornerswas removed in bug 1576390 - should we increase the max SDK version? Are there other known issues with the 10.15 SDK still?
I just tried building with the 10.15 SDK and we're now failing as follows:
9:36.20 /Users/spohl/Documents/mozilla-central/modules/libmar/verify/MacVerifyCrypto.cpp:19:16: error: typedef 'OpaqueSecKeyRef' cannot be referenced with a struct specifier
9:36.20 typedef struct OpaqueSecKeyRef* SecKeyRef;
9:36.20 ^
9:36.20 /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks/Security.framework/Headers/SecBase.h:114:25: note: declared here
9:36.20 typedef struct __SecKey OpaqueSecKeyRef;
9:36.20 ^
9:36.20 1 error generated.
I suspect that there would be further errors later in the build too.
Comment 8•6 years ago
|
||
I'm removing the word NSSurface from the bug summary. Let's use this bug as a generic "do what needs to be done to allow building with the 10.15 SDK" bug.
| Assignee | ||
Comment 9•6 years ago
|
||
Patched for FIREFOX_73_0_1_RELEASE.
Builds and runs successfully using XCode11 and MacOS10.15.sdk.
| Assignee | ||
Comment 10•6 years ago
|
||
SS of buildconfig
Comment 11•6 years ago
|
||
Comment 12•6 years ago
|
||
Depends on D64447
Comment 13•6 years ago
|
||
(In reply to Pete Collins (MDG) from comment #9)
Created attachment 9128892 [details] [diff] [review]
ff73.0.1-MaxOS10.15.sdk.patchPatched for FIREFOX_73_0_1_RELEASE.
Builds and runs successfully using XCode11 and MacOS10.15.sdk.
Thank you for this patch. I've taken the liberty of changing your patch slightly to run on our try servers to confirm the fix on our build system.
| Assignee | ||
Comment 14•6 years ago
|
||
No probs. I couldn't get 68esr building and running correctly so I moved on to the newer release branch.
Updated•6 years ago
|
Comment 15•6 years ago
|
||
Comment 16•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/04787960947b
https://hg.mozilla.org/mozilla-central/rev/f957ccd71655
Description
•