Bug 1583854: Fix a build issue that prevented builds with the macOS 10.15 SDK from succeeding. Based on a patch by Pete Collins. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D64447